@@ -88,6 +88,9 @@ Release 0.18.3 - Unreleased
 
     HADOOP-4613. Fix block browsing on Web UI. (Johan Oskarsson via shv)
 
+    HADOOP-4806. HDFS rename should not use src path as a regular expression.
+    (szetszwo)
+
 Release 0.18.2 - 2008-11-03
 
   BUG FIXES
